5032.	[func]		Add krb5-selfsub and ms-selfsub update policy rules.
			[GL #511]

5031.	[cleanup]	Various defines in platform.h has been either dropped
			if always or never triggered on supported platforms
			or replaced with config.h equivalents if the defines
			didn't have any impact on public headers.  Workarounds
			for LinuxThreads have been removed because NPTL is
			available since Linux kernel 2.6.0.  [GL #525]

5030.	[bug]		Align CMSG buffers to a 64-bit boundary, fixes crash
			on architectures with strict alignment. [GL #521]

	--- 9.13.3 released ---

5029.	[func]		Workarounds for servers that misbehave when queried
			with EDNS have been removed, because these broken
			servers and the workarounds for their noncompliance
			cause unnecessary delays, increase code complexity,
			and prevent deployment of new DNS features. See
			https://dnsflagday.net for further details. [GL #150]

5028.	[bug]		Spread the initial RRSIG expiration times over the
			entire working sig-validity-interval when signing a
			zone in named to even out re-signing and transfer
			loads. [GL #418]

5027.	[func]		Set SO_SNDBUF size on sockets. [GL #74]

5026.	[bug]		rndc reconfig should not touch already loaded zones.
			[GL #276]

5025.	[cleanup]	Remove isc_keyboard family of functions. [GL #178]

5024.	[func]		Replace custom assembly for atomic operations with
			atomic support from the compiler. The code will now use
			C11 stdatomic, or __atomic, or __sync builtins with GCC
			or Clang compilers, and Interlocked functions with MSVC.
			[GL #10]

5023.	[cleanup]	Remove wrappers that try to fix broken or incomplete
			implementations of IPv6, pthreads and other core
			functionality required and used by BIND. [GL #192]

5022.	[doc]		Update ms-self, ms-subdomain, krb5-self, and
			krb5-subdomain documentation. [GL !708]

5021.	[bug]		dig returned a non-zero exit code when it received a
			reply over TCP after a retry. [GL #487]
