@@ -465,6 +465,14 @@
 	  instead of using the <command>resolver</command> category.
 	</para>
       </listitem>
+      <listitem>
+	<para>
+	  The <command>rndc nta</command> command could not differentiate
+	  between views of the same name but different class; this
+	  has been corrected with the addition of a <command>-class</command>
+	  option. [GL #105]
+	</para>
+      </listitem>
     </itemizedlist>
   </section>
 
@@ -496,6 +504,15 @@
           incorrectly treated as an error; this caused certain domains
           to be non-resolvable. [GL #390]
         </para>
+      </listitem>
+      <listitem>
+	<para>
+	  When a negative trust anchor was added to multiple views
+	  using <command>rndc nta</command>, the text returned via
+	  <command>rndc</command> was incorrectly truncated after the
+	  first line, making it appear that only one NTA had been
+	  added. This has been fixed. [GL #105]
+	</para>
       </listitem>
       <listitem>
 	<para>
